updated theme description, bumped version

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /**
  *
  * @category            WordPress_Theme
- * @package             Extra_AllNL
+ * @package             Extra_AllNL_Child_Theme
  * @author              Tim Russell <githubber@timrussell.com>
  * @author              Tim Russell <tim@timrussell.com>
  * @license             GPL-2.0+
@@ -12,8 +12,8 @@
  *
  * Theme Name:          Extra ALl NL
  * Theme URI:           http://www.timrussell.com/wordpress-themes/
- * Description:         Extra All NL Child Theme created by Tim Russell. Based off the Extra theme from <a href="http://www.elegantthemes.com/gallery/extra/">Elegant Themes</a>
- * Version:             20151220.1
+ * Description:         Basic child theme, with no header logo image. Based off the Extra theme from <a href="http://www.elegantthemes.com/gallery/extra/">Elegant Themes</a>
+ * Version:             20160512.1
  * Author:              Tim Russell
  * Author URI:          http://timrussell.com/wordpress-themes/
  * License:             GPL-2.0+
