code cleanup and testing

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@
  * Text Domain:         extra-allnl
  * Domain Path:         /languages
  *
- * GitHub Plugin URI:   https://github.com/tdavidrussell/extra-allnl
+ * GitHub Theme URI:   https://github.com/tdavidrussell/extra-allnl
  * GitHub Branch:       master
  *
  * Tags: child-theme, black, green, white, light, dark, two-columns, three-columns, left-sidebar, right-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, editor-style, featured-images, flexible-header, full-width-template, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready, accessibility-ready
