social links now open in new tab

--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@
  * @wordpress-theme
  *
  * Theme Name:          Extra ALL NL
- * Theme URI:           http://www.timrussell.com/wordpress-themes/
+ * Theme URI:           http://www.timrussell.com/wordpress/
  * Description:         Basic child theme, with no header logo image. Based off the Extra theme from <a href="http://www.elegantthemes.com/gallery/extra/">Elegant Themes</a>
- * Version:             20170425.1
+ * Version:             20170712.1
  * Author:              Tim Russell
- * Author URI:          http://timrussell.com/wordpress-themes/
+ * Author URI:          http://timrussell.com/wordpress/
  * License:             GPL-2.0+
  * License URI:         http://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain:         extra-allnl
@@ -32,8 +32,8 @@
  * Requires WP:         4.4
  * Requires PHP:        5.3
  *
- * Support URI:         http://timrussell.com/wordpress-themes/
- * Documentation URI:   http://timrussell.com/wordpress-themes/
+ * Support URI:         http://timrussell.com/wordpress/
+ * Documentation URI:   http://timrussell.com/wordpress/
  *
  * Released under the GPL license
  * http://www.opensource.org/licenses/gpl-license.php
