--- a/style.css
+++ b/style.css
@@ -6,23 +6,23 @@
  * @author              Tim Russell <tim@timrussell.com>
  * @license             GPL-2.0+
  * @link                https://timrussell.com
- * @copyright           Copyright: (c) 2014-2016 Raging One.
+ * @copyright           Copyright: (c) 2017/2018 Raging One.
  *
  * @wordpress-theme
  *
  * Theme Name:          Extra ALL NL
- * Theme URI:           http://www.timrussell.com/wordpress/
+ * Theme URI:           https://gitlab.com/tdavidrussell/extra-allnl
  * Description:         Basic child theme, with no header logo image. Based off the Extra theme from <a href="http://www.elegantthemes.com/gallery/extra/">Elegant Themes</a>
- * Version:             20181012.1
+ * Version:             20181209.1
  * Author:              Tim Russell
- * Author URI:          https://timrussell.com/wordpress/
+ * Author URI:          https://timrussell.com/
  * License:             GPL-2.0+
  * License URI:         http://www.gnu.org/licenses/gpl-2.0.html
  * Text Domain:         extra-allnl
  * Domain Path:         /languages
  *
- * GitHub Theme URI:   https://github.com/tdavidrussell/extra-allnl
- * GitHub Branch:       master
+ * GitLab Theme URI:    https://gitlab.com/tdavidrussell/extra-allnll
+ * GitLab Branch:       master
  *
  * Tags: child-theme, black, green, white, light, dark, two-columns, three-columns, left-sidebar, right-sidebar, fixed-layout, responsive-layout, custom-background, custom-header, custom-menu, editor-style, featured-images, flexible-header, full-width-template, microformats, post-formats, rtl-language-support, sticky-post, theme-options, translation-ready, accessibility-ready
  *
@@ -32,8 +32,8 @@
  * Requires WP:         4.8
  * Requires PHP:        5.3
  *
- * Support URI:         https://timrussell.com/wordpress/
- * Documentation URI:   https://timrussell.com/wordpress/
+ * Support URI:         https://gitlab.com/tdavidrussell/extra-allnl
+ * Documentation URI:   https://gitlab.com/tdavidrussell/extra-allnl
  *
  * Released under the GPL license
  * http://www.opensource.org/licenses/gpl-license.php
